# e2-spy

./: .gitignore  README.md  docker-compose.yaml  main.js  notes.md  package.json  pre-index.css  pre-index.html  pre-index.js  pyproject.toml  requirements.in  requirements.txt
.github/: dependabot.yaml
.github/workflows/: pip-compile-upgrade.yaml
backend/: _mssql.cp39-win_amd64.pyd  pymssql.cp39-win_amd64.pyd
backend/backend/: app.py
backend/backend/static/: loading-summary.js
backend/backend/templates/: base.html  index.html  internal-server-error.html  settings.html
e2_spy/: __init__.py  app.py  config.example.py  db.py  paperless.py  tasks.py  versions.py
e2_spy/db/: __init__.py  app.py  e2.py
e2_spy/static/: index.js  modal-job-notes.js  open-sales-report.js
e2_spy/templates/: action-summary.html  base.html  closed-jobs.html  contacts.html  customers.html  days-since-last-activity.html  income-statements.html  index.html  internal-server-error.html  inventory-count-sheet.html  job-notes-form.html  job-notes-in-place.html  job-performance.html  jobs-closed-last-week.html  loading-summary.html  locked-page.html  open-sales-report.html  sales-summary.html  service-vendors.html  settings.html
e2_spy/templates/includes/: job-notes-initial.html  modal-job-notes.html
e2_spy/templates/paperless-parts/: quote-items.html
