[project]
name = "e2-spy"
version = "2021.0.0"
description = "Custom reports for E2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "flask>=3.1.2",
    "fort>=2025.1",
    "httpx>=0.28.1",
    "pymssql>=2.3.11",
    "waitress>=3.0.2",
    "whitenoise>=6.11.0",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "ty>=0.0.34",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
